--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -28,20 +28,9 @@ layout: default
               class=profile_image_class
               alt=page.profile.image -%}
             {% endif -%}
-<!--             {%- if page.profile.address %}
+            {%- if page.profile.address %}
             <div class="address">
               {{ page.profile.address }}
-            </div> -->
-              {%- if page.social %}
-            <div class="social">
-              <div class="contact-icons">
-                {% include social.html %}
-              </div>
-
-              <div class="contact-note">
-                {{ site.contact_note }}
-              </div>
-              
             </div>
           {%- endif %}
             {%- endif %}
@@ -64,8 +53,8 @@ layout: default
             {%- include selected_papers.html %}
           {%- endif %}
 
-          <!-- Social -->
-<!--           {%- if page.social %}
+        <!-- Social -->
+          {%- if page.social %}
             <div class="social">
               <div class="contact-icons">
                 {% include social.html %}
@@ -77,6 +66,6 @@ layout: default
               
             </div>
           {%- endif %}
-        </article> -->
+        </article> 
 
 </div>
