--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -63,6 +63,9 @@ layout: default
                 {{ site.contact_note }}
               </div>
               
+              <div align="center"> 
+                    <img src="https://visitor-badge.glitch.me/badge?page_id=sun0225SUN" /> 
+              </div>
             </div>
           {%- endif %}
         </article> 
