--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -62,6 +62,8 @@ layout: default
               <div class="contact-note">
                 {{ site.contact_note }}
               </div>
+
+              <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=RAD1FxbKRY6EdcPReLsNwyZf6FCnfyURSR0_ltl43Cc"></script>
               
               <div align="center"> 
                     <img src="https://visitor-badge.glitch.me/badge?page_id=sun0225SUN" /> 
