--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -63,8 +63,8 @@ layout: default
                 {{ site.contact_note }}
               </div>
 
-              <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=RAD1FxbKRY6EdcPReLsNwyZf6FCnfyURSR0_ltl43Cc"></script>
-              
+              <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=RAD1FxbKRY6EdcPReLsNwyZf6FCnfyURSR0_ltl43Cc"></script> -->
+              <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=RAD1FxbKRY6EdcPReLsNwyZf6FCnfyURSR0_ltl43Cc&cl=ffffff&w=a"></script>
               <div align="center"> 
                     <img src="https://visitor-badge.glitch.me/badge?page_id=sun0225SUN" /> 
               </div>
